objects/Location.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>FSL_Account__r.CMI_Billing_Address__c</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Code__c</fullName>
        <formula>FSL_Account__r.Name &amp; &apos;:- &apos;&amp; FSL_Account__r.FSL_ERP_Customer_Code__c</formula>
        <label>Account Name-Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (1 AND 2 AND 4)</booleanFilter>
            <errorMessage>Please select an Active Guidanz Account!</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guidanz-Cash, Guidanz</value>
            </filterItems>
            <filterItems>
                <field>Account.CMI_Account_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.FSL_Source_ERP__c</field>
                <operation>equals</operation>
                <valueField>$User.ERP__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>CSS Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FSL_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.FSL_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <columns>Name</columns>
        <columns>LocationType</columns>
        <columns>VisitorAddress</columns>
        <columns>FSL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sites</label>
    </listViews>
    <listViews>
        <fullName>My_Locations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Locations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>